[project]
name = "network-tank"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Magomed Aliev", email = "steam.30mb1@gmail.com"},
]
dependencies = [
    "nekoton>=0.1.19",
    "black>=24.4.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
